<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="schedulingapp.team17.cmsc355.com.schedulingapp.PreferredMeetingLocation">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="244dp"
        android:layout_height="54dp"
        android:text="Choose Your Preferred Location"
        android:textSize="16dp"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="30dp"
        android:layout_marginTop="21dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Library"
        android:textSize="20dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/textView15"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Resturant"
        android:textSize="20dp"
        android:layout_alignBaseline="@+id/textView17"
        android:layout_alignBottom="@+id/textView17"
        android:layout_alignEnd="@+id/textView15" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Shopping Center"
        android:textSize="20dp"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="Book Store"
        android:textSize="20dp"
        android:layout_alignBaseline="@+id/textView19"
        android:layout_alignBottom="@+id/textView19"
        android:layout_alignStart="@+id/textView18" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView17"
        android:layout_below="@+id/textView17"
        android:layout_marginTop="25dp"
        android:onClick="but20"
        android:text="Choose" />

    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button"
        android:layout_alignBottom="@+id/button"
        android:layout_alignEnd="@+id/textView18"
        android:onClick="but21"
        android:text="Choose" />

    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView17"
        android:layout_below="@+id/textView19"
        android:layout_marginTop="38dp"
        android:onClick="but22"
        android:text="Choose" />

    <Button
        android:id="@+id/button17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button16"
        android:layout_alignBottom="@+id/button16"
        android:layout_alignStart="@+id/textView18"
        android:onClick="but23"
        android:text="Choose" />
</RelativeLayout>
