...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tuesday"
        android:textSize="20dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="165dp"
        android:layout_alignBottom="@+id/button19"
        android:layout_alignStart="@+id/textView23" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...

    <Button
        android:id="@+id/button18"
        android:layout_width="84dp"
        android:layout_height="36dp"
        android:onClick="button30"
        android:text="select"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="92dp"
        android:layout_above="@+id/button19"
        android:layout_alignStart="@+id/button19"
        android:layout_marginBottom="19dp" />

...
