<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="schedulingapp.team17.cmsc355.com.schedulingapp.MeetingTimes">

    <TextView
        android:id="@+id/textView"
        android:layout_width="351dp"
        android:layout_height="65dp"
        android:text="Choose Your Preferred Meeting Time"
        android:textSize="20dp"
        tools:layout_editor_absoluteY="5dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="69dp"
        android:layout_height="26dp"
        android:text="8:00 a.m"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="97dp"
        android:layout_marginStart="23dp"
        android:layout_alignBottom="@+id/button7"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button7"
        android:layout_width="63dp"
        android:layout_height="36dp"
        android:onClick="but7"
        android:text="Click"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="333dp"
        android:layout_above="@+id/button1"
        android:layout_alignStart="@+id/button1"
        android:layout_marginBottom="15dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="9:00 a.m"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="134dp"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignStart="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10:00 a.m"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="180dp"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1:00 p.m"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="300dp"
        android:layout_alignBaseline="@+id/button12"
        android:layout_alignBottom="@+id/button12"
        android:layout_alignStart="@+id/textView7" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="11:00 a.m"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="222dp"
        android:layout_alignBaseline="@+id/button10"
        android:layout_alignBottom="@+id/button10"
        android:layout_alignStart="@+id/textView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="12:00 a.m"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="261dp"
        android:layout_alignBaseline="@+id/button11"
        android:layout_alignBottom="@+id/button11"
        android:layout_alignStart="@+id/textView6" />

    <Button
        android:id="@+id/button1"
        android:layout_width="63dp"
        android:layout_height="36dp"
        android:onClick="but1"
        android:text="Click"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="78dp"
        android:layout_alignBaseline="@+id/button8"
        android:layout_alignBottom="@+id/button8"
        android:layout_alignStart="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="63dp"
        android:layout_height="36dp"
        android:onClick="but2"
        android:text="Click"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="123dp"
        android:layout_alignBaseline="@+id/button9"
        android:layout_alignBottom="@+id/button9"
        android:layout_alignStart="@+id/button3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="63dp"
        android:layout_height="36dp"
        android:onClick="but3"
        android:text="Click"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="163dp"
        android:layout_alignBaseline="@+id/button10"
        android:layout_alignBottom="@+id/button10"
        android:layout_alignStart="@+id/button4" />

    <Button
        android:id="@+id/button4"
        android:layout_width="63dp"
        android:layout_height="36dp"
        android:onClick="but4"
        android:text="Click"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="205dp"
        android:layout_alignBaseline="@+id/button11"
        android:layout_alignBottom="@+id/button11"
        android:layout_alignStart="@+id/button5" />

    <Button
        android:id="@+id/button5"
        android:layout_width="63dp"
        android:layout_height="36dp"
        android:onClick="but5"
        android:text="CLICK"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="245dp"
        android:layout_alignBaseline="@+id/button12"
        android:layout_alignBottom="@+id/button12"
        android:layout_alignStart="@+id/button6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3:00 p.m"
        tools:layout_editor_absoluteX="201dp"
        tools:layout_editor_absoluteY="97dp"
        android:layout_alignBottom="@+id/button8"
        android:layout_alignStart="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="4:00 p.m"
        tools:layout_editor_absoluteX="201dp"
        tools:layout_editor_absoluteY="134dp"
        android:layout_alignBottom="@+id/button9"
        android:layout_alignStart="@+id/textView10" />

    <Button
        android:id="@+id/button6"
        android:layout_width="63dp"
        android:layout_height="36dp"
        android:onClick="but6"
        android:text="Click"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="293dp"
        android:layout_alignBaseline="@+id/button13"
        android:layout_alignBottom="@+id/button13"
        android:layout_toEndOf="@+id/textView2"
        android:layout_marginStart="17dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="63dp"
        android:layout_height="36dp"
        android:onClick="but8"
        android:text="CLICK"
        tools:layout_editor_absoluteX="285dp"
        tools:layout_editor_absoluteY="80dp"
        android:layout_above="@+id/button2"
        android:layout_alignStart="@+id/button9"
        android:layout_marginBottom="15dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="5:00 p.m"
        tools:layout_editor_absoluteX="201dp"
        tools:layout_editor_absoluteY="180dp"
        android:layout_alignBottom="@+id/button10"
        android:layout_alignStart="@+id/textView11" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="6:00 p.m"
        tools:layout_editor_absoluteX="201dp"
        tools:layout_editor_absoluteY="222dp"
        android:layout_alignBottom="@+id/button4"
        android:layout_alignStart="@+id/textView12" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="7:00 p.m"
        tools:layout_editor_absoluteX="201dp"
        tools:layout_editor_absoluteY="261dp"
        android:layout_alignBottom="@+id/button5"
        android:layout_alignStart="@+id/textView13" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="8:00 p.m"
        tools:layout_editor_absoluteX="201dp"
        tools:layout_editor_absoluteY="300dp"
        android:layout_alignBottom="@+id/button13"
        android:layout_toStartOf="@+id/button13"
        android:layout_marginEnd="11dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2:00 p.m"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="345dp"
        android:layout_alignBottom="@+id/button6"
        android:layout_alignEnd="@+id/textView3" />

    <Button
        android:id="@+id/button9"
        android:layout_width="63dp"
        android:layout_height="36dp"
        android:onClick="but9"
        android:text="CLICK"
        tools:layout_editor_absoluteX="285dp"
        tools:layout_editor_absoluteY="120dp"
        android:layout_above="@+id/button10"
        android:layout_alignStart="@+id/button10"
        android:layout_marginBottom="19dp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="63dp"
        android:layout_height="36dp"
        android:onClick="but10"
        android:text="CLICK"
        tools:layout_editor_absoluteX="285dp"
        tools:layout_editor_absoluteY="163dp"
        android:layout_above="@+id/button11"
        android:layout_alignStart="@+id/button11"
        android:layout_marginBottom="20dp" />

    <Button
        android:id="@+id/button11"
        android:layout_width="63dp"
        android:layout_height="36dp"
        android:onClick="but11"
        android:text="CLICK"
        tools:layout_editor_absoluteX="285dp"
        tools:layout_editor_absoluteY="205dp"
        android:layout_above="@+id/button12"
        android:layout_alignStart="@+id/button12"
        android:layout_marginBottom="13dp" />

    <Button
        android:id="@+id/button12"
        android:layout_width="63dp"
        android:layout_height="36dp"
        android:onClick="but12"
        android:text="CLICK"
        tools:layout_editor_absoluteX="285dp"
        tools:layout_editor_absoluteY="250dp"
        android:layout_marginBottom="14dp"
        android:layout_above="@+id/button13"
        android:layout_alignStart="@+id/button13" />

    <Button
        android:id="@+id/button13"
        android:layout_width="63dp"
        android:layout_height="36dp"
        android:onClick="but13"
        android:text="CLICK"
        tools:layout_editor_absoluteX="285dp"
        tools:layout_editor_absoluteY="293dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="53dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/textView" />
</RelativeLayout>
